# wsgi_app_example

./: .gitignore  pyproject.toml  setup.cfg
wsgi_app/: example.py
